Mask secrets - fix for Java 11, another test
A test to verfiy that the command logger doesn't log passwords